@@ -177,7 +177,7 @@
 					:border-width 1
 					:border (get-color *sm-border-color*)
 					:colormap (xlib:screen-default-colormap *screen*)
-					:event-mask '(:exposure :key-press :key-release :button-press :button-release))
+					:event-mask '(:exposure))
 	*sm-font* (xlib:open-font *display* *sm-font-string*)
 	*sm-gc* (xlib:create-gcontext :drawable *sm-window*
 				      :foreground (get-color *sm-foreground-color*)
@@ -187,6 +187,7 @@
   (xlib:map-window *sm-window*)
   (draw-second-mode-window)
   (no-focus)
+  (ungrab-main-keys)
   (xgrab-keyboard *root*)
   (xgrab-pointer *root* 66 67)
   (unwind-protect
@@ -201,6 +202,7 @@
     (xlib:destroy-window *sm-window*)
     (xungrab-keyboard)
     (xungrab-pointer)
+    (grab-main-keys)
     (show-all-children))
   (wait-no-key-or-button-press)
   (when *second-mode-program*
